@@ -361,8 +361,7 @@ def_t *CO_GenCode (opcode_t *op, def_t *var_a, def_t *var_b)
 	}
 
 	// Allocate the result register.
-	var_c = (def_t *) malloc(sizeof(def_t));
-	memset(var_c, 0, sizeof(def_t));
+	var_c = (def_t *) SafeMalloc(sizeof(def_t));
 	var_c->ofs = numpr_globals;
 	var_c->type = op->type_c->type;
 
@@ -477,7 +476,7 @@ def_t *CO_ParseImmediate (void)
 			{
 				if (!STRCMP(G_STRING(cn->ofs), pr_immediate_string))
 				{
-					cell = (struct hash_element *) malloc(sizeof(struct hash_element));
+					cell = (struct hash_element *) SafeMalloc(sizeof(struct hash_element));
 					cell->next = HashTable[idx];
 					cell->def = cn;
 					HashTable[idx] = cell;
@@ -488,7 +487,7 @@ def_t *CO_ParseImmediate (void)
 			{
 				if (G_FLOAT(cn->ofs) == pr_immediate._float)
 				{
-					cell = (struct hash_element *) malloc(sizeof(struct hash_element));
+					cell = (struct hash_element *) SafeMalloc(sizeof(struct hash_element));
 					cell->next = HashTable[idx];
 					cell->def = cn;
 					HashTable[idx] = cell;
@@ -501,7 +500,7 @@ def_t *CO_ParseImmediate (void)
 					&& ( G_FLOAT(cn->ofs+1) == pr_immediate.vector[1])
 					&& ( G_FLOAT(cn->ofs+2) == pr_immediate.vector[2]))
 				{
-					cell = (struct hash_element *) malloc(sizeof(struct hash_element));
+					cell = (struct hash_element *) SafeMalloc(sizeof(struct hash_element));
 					cell->next = HashTable[idx];
 					cell->def = cn;
 					HashTable[idx] = cell;
@@ -516,13 +515,12 @@ def_t *CO_ParseImmediate (void)
 	}
 
 	// Allocate a new one
-	cn = (def_t *) malloc(sizeof(def_t));
-	memset(cn, 0, sizeof(*cn));
+	cn = (def_t *) SafeMalloc(sizeof(def_t));
 	cn->next = NULL;
 	pr.def_tail->next = cn;
 	pr.def_tail = cn;
 
-	cell = (struct hash_element *) malloc(sizeof(struct hash_element));
+	cell = (struct hash_element *) SafeMalloc(sizeof(struct hash_element));
 	cell->next = HashTable[idx];
 	cell->def = cn;
 	HashTable[idx] = cell;
@@ -675,7 +673,7 @@ static function_t *ParseImmediateStatements (type_t *type)
 	def_t	*scopeDef;
 	def_t	*searchDef;
 
-	f = (function_t *) malloc(sizeof(function_t));
+	f = (function_t *) SafeMalloc(sizeof(function_t));
 
 	// Check for builtin function definition
 	if (TK_CHECK(TK_COLON))
@@ -766,7 +764,7 @@ def_t *PR_GetDef (type_t *type, const char *name, def_t *scope, qboolean allocat
 	def_t	*def;
 	def_t	*elementDef;
 	char	element[MAX_NAME];
-	char	key[100], *tmp;
+	char	key[100];
 	int			idx = 0;
 	struct hash_element *cell = NULL;
 
@@ -824,21 +822,18 @@ def_t *PR_GetDef (type_t *type, const char *name, def_t *scope, qboolean allocat
 	}
 
 	// Allocate a new def
-	def = (def_t *) malloc(sizeof(def_t));
-	memset(def, 0, sizeof(*def));
+	def = (def_t *) SafeMalloc(sizeof(def_t));
 	def->next = NULL;
 	pr.def_tail->next = def;
 	pr.def_tail = def;
 
 	// Add to hash table
-	cell = (struct hash_element *) malloc(sizeof(struct hash_element));
+	cell = (struct hash_element *) SafeMalloc(sizeof(struct hash_element));
 	cell->next = HashTable[idx];
 	cell->def = def;
 	HashTable[idx] = cell;
 
-	tmp = (char *) malloc(strlen(name) + 1);
-	strcpy(tmp, name);
-	def->name = tmp;
+	def->name = SafeStrdup(name);
 	def->type = type;
 
 	def->scope = scope;
@@ -1074,11 +1069,10 @@ static def_t *NewVarDef (const char *name, type_t *type)
 	def_t	*def;
 	int		idx;
 	struct hash_element *cell;
-	char	key[100], *tmp;
+	char	key[100];
 
 	// Allocate the array def
-	def = (def_t *) malloc(sizeof(def_t));
-	memset(def, 0, sizeof(*def));
+	def = (def_t *) SafeMalloc(sizeof(def_t));
 	def->next = NULL;
 	pr.def_tail->next = def;
 	pr.def_tail = def;
@@ -1093,15 +1087,12 @@ static def_t *NewVarDef (const char *name, type_t *type)
 	{
 		idx = COM_Hash(name);
 	}
-	cell = (struct hash_element *) malloc(sizeof(struct hash_element));
+	cell = (struct hash_element *) SafeMalloc(sizeof(struct hash_element));
 	cell->next = HashTable[idx];
 	cell->def = def;
 	HashTable[idx] = cell;
 
-	tmp = (char *) malloc(strlen(name) + 1);
-	strcpy(tmp, name);
-	def->name = tmp;
-
+	def->name = SafeStrdup(name);
 	def->type = type;
 	def->scope = pr_scope;
 
